# reachy

./: .gitignore  README.md  app.py  pyproject.toml
assets/reachy_web/: gstwebrtc-api.js  sound.js  viewer.js
assets/reachy_web/assets/: default_state.json  reachy-mini.urdf
assets/reachy_web/assets/meshes_optimized/: 5w_speaker.glb  antenna.glb  antenna_V2.glb  antenna_body_3dprint.glb  antenna_holder_l_3dprint.glb  antenna_holder_r_3dprint.glb  antenna_interface_3dprint.glb  arducam.glb  b3b_eh.glb  b3b_eh_1.glb  bearing_85x110x13.glb  big_lens_d40.glb  body_down_3dprint.glb  body_foot_3dprint.glb  body_top_3dprint.glb  body_turning_3dprint.glb  bts2_m2_6x8.glb  dc15_a01_case_b_dummy.glb  dc15_a01_case_f_dummy.glb  dc15_a01_case_m_dummy.glb  dc15_a01_horn_dummy.glb  dc15_a01_led_cap2_dummy.glb  glasses_dolder_3dprint.glb  head_back_3dprint.glb  head_front_3dprint.glb  head_mic_3dprint.glb  lens_cap_d30_3dprint.glb  lens_cap_d40_3dprint.glb  m12_fisheye_lens_1_8mm.glb  (+12 more)
assets/reachy_web/kin/: reachy_mini_rust_kinematics.js  reachy_mini_rust_kinematics_bg.wasm
assets/reachy_web/src/: Kinematics.js
docs/: camera-webrtc.md  requirements.md
examples/: curious.json
scripts/: fit_sounds.py  play_emotion.py  play_symbolic.py  render_move.py  view_move.py
src/reachy_motion/: __init__.py  anim.py  audio.py  audio_monitor.py  behaviors_store.py  conversation.py  daemon_control.py  dataset.py  fitted_sounds.json  glb.py  player.py  poses.py  render.py  robot_control.py  schema.py  sound.py  sound_fingerprints.json  symbolic.py  transcribe.py  tts.py  viewer.py  web.py
