[project]
name = "reachy-motion"
version = "0.1.0"
description = "Text-to-motion + sound behaviors for the Reachy Mini robot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.15.1",
    "imageio[ffmpeg]>=2.37.3",
    "matplotlib>=3.11.0",
    "reachy-mini[mujoco,placo-kinematics]>=1.8.3",
    "trimesh>=4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_motion"]
